add button of coding profiles

--- a/index.html
+++ b/index.html
@@ -14,21 +14,27 @@
       <a href="#projects">Projects</a>
       <a href="#about">About</a>
       <a href="#contact">Contact</a>
-      <a href="https://github.com/AmarSinghKatiyar" target="_blank">GitHub</a>
+      <a href="https://github.com/AmarSinghKatiyar">GitHub</a>
     </nav>
   </header>
 
   <!-- Hero Section -->
   <section class="hero fade-in">
     <img src="my image.png" alt="Profile Photo" class="profile-pic">
-    <h2>नमस्ते — I am Amar Singh Katiyar</h2>
+    <h2>नमस्ते — I'm <span> Amar Singh Katiyar</span></h2>
     <p>
+      Problem Solver | Full Stack Developer
+    </p>
+    <p><b>
       Motivated Computer Science & Engineering student (MPEC Kanpur, 2023–2027).
-      Passionate about web development, machine learning, and building real-time apps.
+      Passionate about web development, machine learning, and building real-time apps.</b>
     </p>
     <div class="buttons">
-      <a href="https://github.com/AmarSinghKatiyar" target="_blank">GitHub</a>
-      <a href="https://www.linkedin.com/in/amar-singh-katiyar-38522b2a9" target="_blank">LinkedIn</a>
+      <a href="https://github.com/AmarSinghKatiyar" >GitHub</a>
+      <a href="https://www.linkedin.com/in/amar-singh-katiyar-38522b2a9" >LinkedIn</a><br>
+      <a href="https://www.hackerrank.com/profile/amarsinghkatiyar" >HackerRank</a>
+      <a href="https://leetcode.com/u/AMAR_14/" >Leetcode</a>
+      <a href="https://www.geeksforgeeks.org/profile/amarsinghkr10o?tab=activity" >GeeksforGeeks</a>
     </div>
   </section>
 
@@ -39,22 +45,22 @@
       <div class="card slide-up delay1">
         <h3>Voice Translator</h3>
         <p>Real-time speech translator using Google APIs.</p>
-        <a href="https://github.com/AmarSinghKatiyar/Voice-Translator" target="_blank">View Repo</a>
+        <a href="https://github.com/AmarSinghKatiyar/Voice-Translator" target="_blank">View Here</a>
       </div>
       <div class="card slide-up delay2">
         <h3>Resume Builder</h3>
         <p>Live-preview resume generator (HTML, CSS, JS).</p>
-        <a href="https://github.com/AmarSinghKatiyar/Resume-Builder" target="_blank">View Repo</a>
+        <a href="https://amarsinghkatiyar.github.io/Resume-Builder/" target="_blank">View Here</a>
       </div>
       <div class="card slide-up delay3">
         <h3>Smart To-Do List</h3>
         <p>Dynamic task manager with add/edit/delete features.</p>
-        <a href="https://github.com/AmarSinghKatiyar/Smart-To-Do-List" target="_blank">View Repo</a>
+        <a href="https://amarsinghkatiyar.github.io/Smart-To-Do-List/" target="_blank">View Here</a>
       </div>
       <div class="card slide-up delay4">
         <h3>Calculator Web App</h3>
         <p>Interactive calculator with modern neon CSS effects.</p>
-        <a href="https://github.com/AmarSinghKatiyar/calculator-web-app" target="_blank">View Repo</a>
+        <a href="https://amarsinghkatiyar.github.io/calculator-web-app/" target="_blank">View Here</a>
       </div>
     </div>
   </section>
@@ -62,18 +68,19 @@
   <!-- About Section -->
   <section id="about" class="fade-in">
     <h2>About Me</h2>
-    <p>
-      I am currently pursuing a B.Tech in Computer Science at MPEC Kanpur (2023–2027).
+    <pre>
+      <h3>I am currently pursuing a B.Tech in Computer Science at MPEC Kanpur (2023–2027).
       Learning web development, machine learning and DSA. 
       Open to collaborations, open-source contributions, and internships.
-    </p>
+      </h3>
+    </pre>
   </section>
 
   <!-- Contact Section -->
   <section id="contact" class="fade-in">
     <h2>Contact</h2>
     <ul>
-      <li>Email: <a href="mailto:amar@example.com">amar@example.com</a></li>
+      <li>Email: <a href="amarsinghkatiyar1408@gmail.com">@Amar</a></li>
       <li>LinkedIn: <a href="https://www.linkedin.com/in/amar-singh-katiyar-38522b2a9" target="_blank">Profile</a></li>
       <li>GitHub: <a href="https://github.com/AmarSinghKatiyar" target="_blank">@AmarSinghKatiyar</a></li>
     </ul>
