update html file

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
   <!-- About Section -->
   <section id="about" class="fade-in">
     <h2>About Me</h2>
-    <pre>
-      <h3>I am currently pursuing a B.Tech in Computer Science at MPEC Kanpur (2023–2027).
+    <p>
+      <h3><b>I am currently pursuing a B.Tech in Computer Science at MPEC Kanpur (2023–2027).
       Learning web development, machine learning and DSA. 
-      Open to collaborations, open-source contributions, and internships.
+      Open to collaborations, open-source contributions, and internships.</b>
       </h3>
-    </pre>
+    </p>
   </section>
 
   <!-- Contact Section -->
