update html to new_html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </p>
     <p><b>
       Motivated Computer Science & Engineering student (MPEC Kanpur, 2023–2027).
-      Passionate about web development, machine learning, and building real-time apps.</b>
+      Passionate about web development, machine learning, and building real-time apps.5🌟 in python on hackerrank</b>
     </p>
     <div class="buttons">
       <a href="https://github.com/AmarSinghKatiyar" >GitHub</a>
