add gap between image and navbar

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </header>
 
   <!-- Hero Section -->
-  <section class="hero fade-in">
+  <section class="hero fade-in"><br>
     <img src="my image.png" alt="Profile Photo" class="profile-pic">
     <h2>नमस्ते — I'm <span> Amar Singh Katiyar</span></h2>
     <p>
@@ -27,7 +27,7 @@
     </p>
     <p><b>
       Motivated Computer Science & Engineering student (MPEC Kanpur, 2023–2027).
-      Passionate about web development, machine learning, and building real-time apps.5🌟 in python on hackerrank</b>
+      Passionate about web development, machine learning, and building real-time apps.5🌟 in python on Hackerrank</b>
     </p>
     <div class="buttons">
       <a href="https://github.com/AmarSinghKatiyar" >GitHub</a>
